# sd-scripts-Bootstrapper

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_pytorch_windows.txt  requirements_windows.txt  requirements_windows_lock.txt  setup-uv.bat  setup-uv.ps1  start_training_anima.bat  start_training_anima.ps1  start_training_flux.bat  start_training_flux.ps1  start_training_sdxl.bat  start_training_sdxl.ps1
.agents/skills/references/: project-overview.md
document/: anima_lora_optimizer_scheduler.md
scripts/: bootstrapper_common.ps1  install_kohya_windows.py  prepare_training_config.py
training_settings/anima/: training_setting.template.toml
training_settings/flux/: training_setting.template.toml
training_settings/sdxl/: training_setting.template.toml
