[project]
name = "sd-scripts-bootstrapper"
version = "0.1.0"
description = "One-click Python bootstrapper for sd-scripts Anima training"
requires-python = ">=3.10,<3.12"
dependencies = [
    "accelerate==1.8.1",
    "adv-optm==2.2.3",
    "aiofiles==23.2.1",
    "altair==4.2.2",
    "bitsandbytes==0.49.2",
    "dadaptation==3.2",
    "diffusers[torch]==0.32.2",
    "easygui==0.98.3",
    "einops==0.7.0",
    "fairscale==0.4.13",
    "ftfy==6.1.1",
    "gradio==5.34.2",
    "huggingface-hub==0.34.3",
    "imagesize==1.4.1",
    "invisible-watermark==0.2.0",
    "library",
    "lion-pytorch==0.2.4",
    "lycoris-lora==3.2.0.post2",
    "omegaconf==2.3.0",
    "onnx==1.16.1",
    "onnxruntime-gpu==1.19.2",
    "open-clip-torch==2.20.0",
    "opencv-python==4.10.0.84",
    "prodigy-plus-schedule-free==2.0.1",
    "prodigyopt==1.1.2",
    "protobuf==3.20.3",
    "pytorch-lightning==1.9.0",
    "pytorch-optimizer==3.10.0",
    "rich==14.0.0",
    "safetensors==0.4.4",
    "schedulefree==1.4.1",
    "scipy==1.11.4",
    "sentencepiece==0.2.0",
    "tensorboard==2.19.0",
    "tensorflow==2.19.0",
    "tensorflow-io-gcs-filesystem==0.31.0; sys_platform == 'win32'",
    "tensorflow-io-gcs-filesystem>=0.37.1; sys_platform == 'linux'",
    "timm==1.0.15",
    "tk==0.1.0",
    "toml==0.10.2",
    "torchao==0.13.0",
    "torch==2.7.0+cu128",
    "torchvision==0.22.0+cu128",
    "transformers==4.54.1",
    "voluptuous==0.13.1",
    "wandb==0.18.0",
    "xformers==0.0.30",
]

[tool.uv]
package = false

[tool.uv.sources]
library = { path = "sd-scripts" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
xformers = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
